# cppengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cppengine.sln  makefile
cppengine/: cppengine.vcxproj  cppengine.vcxproj.filters
cppengine_tests/: cpp.hint  cppengine_tests.vcxproj  cppengine_tests.vcxproj.filters
include/: camera.hpp  configuration.hpp  controls.hpp  display.hpp  frustum.hpp  game.hpp  opengl.hpp  renderer.hpp  shader.hpp  transform.hpp  types.hpp  world.hpp
include/containers/: array.hpp  queue.hpp
include/entities/: entity_manager.hpp  entity_model_components.hpp
include/loading/: model_loader.hpp
include/rendering/: material_manager.hpp  model_manager.hpp  render_world.hpp
res/: Barrel.blend
shaders/: default.frag  default.vert  greybox.frag  greybox.vert  noise.frag  noise.vert  test_frag.glsl  test_vert.glsl
src/: .#d_display.hpp  Controls.cpp  Controls.hpp  Display.cpp  Display.hpp  Entity.cpp  Entity.hpp  EntityComponent.hpp  Game.cpp  Game.hpp  Input.cpp  Light.cpp  Light.hpp  Main.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Types.hpp  Vector.cpp  Vector.hpp  boxcollider.cpp  boxcollider.hpp  camera.hpp  configuration.hpp  constants.hpp  controls.cpp  controls.hpp  d_display.cpp  d_display.hpp  display.cpp  display.hpp  entity.cpp  entity.hpp  (+30 more)
src/EntityComponents/: Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/containers/: array.hpp
src/core/: light.hpp
src/entities/: entity_handle.hpp  entity_light_components.cpp  entity_light_components.hpp  entity_manager.cpp  entity_manager.hpp  entity_model_components.cpp  entity_transforms.cpp  entity_transforms.hpp
src/lib/: Camera.hpp  Geometry.cpp  Geometry.hpp  OpenGL.cpp  OpenGL.hpp  Transform.hpp  Types.hpp  Vector.hpp  Vertex.hpp  imgui_draw.cpp  imgui_impl_sdl_gl3.cpp
src/loader/: model_loader.cpp  model_loader.hpp
src/loading/: model_loader.cpp  model_loader.hpp
src/rendering/: material_manager.cpp  material_manager.hpp  model_manager.cpp  model_manager.hpp  r_light.hpp  render_entities.cpp  render_entities.hpp  render_entity.hpp  render_material.cpp  render_material.hpp  render_mesh.cpp  render_mesh.hpp  render_world.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp
src/rendering/gl/: gl_light.cpp  gl_light.hpp  gl_mesh.cpp  gl_mesh.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_texture.cpp  gl_texture.hpp  mesh.cpp  mesh.hpp  opengl.hpp  texture.cpp  texture.hpp
src/resources/: res_mesh.cpp  res_mesh.hpp  res_texture.cpp  res_texture.hpp  res_vertex.hpp  texture.cpp  texture.hpp
src/shaders/: test_frag.glsl  test_vert.glsl
tests/: test_containers_array.cpp  test_containers_queue.cpp  test_dummy.cpp
